Added method to open java andrtoid app and send data through intent

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\GoogleARCore\Examples\ComputerVision\Scripts\TextureReader.cs" />
     <Compile Include="Assets\GoogleARCore\Examples\ComputerVision\Scripts\TextureReaderApi.cs" />
     <Compile Include="Assets\GoogleARCore\Examples\HelloAR\Scripts\HelloARController.cs" />
+    <Compile Include="Assets\GoogleARCore\Examples\HelloAR\Scripts\LaunchApp.cs" />
     <Compile Include="Assets\GoogleARCore\Examples\HelloAR\Scripts\PrefabsManager.cs" />
     <Compile Include="Assets\GoogleARCore\Examples\ObjectManipulation\Scripts\Gestures\DragGesture.cs" />
     <Compile Include="Assets\GoogleARCore\Examples\ObjectManipulation\Scripts\Gestures\DragGestureRecognizer.cs" />
